[package]
name = "aoc2022"
version = "0.1.18"
edition = "2021"
description = "Advent of Code 2022"
repository = "https://github.com/PPFilip/aoc2022"
readme = "README.md"
license-file = "LICENSE.txt"
publish = false

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"

[[bin]]
name = "day09"
path = "src/day09.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day12"
path = "src/day12.rs"

[[bin]]
name = "day12-nicer"
path = "src/day12-nicer.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"

[[bin]]
name = "day14"
path = "src/day14.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[[bin]]
name = "day16"
path = "src/day16.rs"

[[bin]]
name = "day16-nicer"
path = "src/day16-nicer.rs"

[[bin]]
name = "day17"
path = "src/day17.rs"

[[bin]]
name = "day18"
path = "src/day18.rs"

[dependencies]
pretty_assertions = "1.3.0"
itertools = "0.10.5"
pathfinding = "4.0.0"
serde_json = "1.0.89"
serde = { version = "1.0.150", features = ["derive", "rc"] }
regex = "1.7.0"
rand = "0.8.5"